Add the templates and generated a package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "url": ""
   },
   "files": [
-    "generators"
+    "app",
+    "server"
   ],
   "main": "generators/index.js",
   "keywords": [
