--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   ],
   "dependencies": {
     "chalk": "^1.1.3",
+    "pluralize": "^3.1.0",
     "yeoman-generator": "^1.0.0",
     "yosay": "^1.2.1"
   },
