--- a/package.json
+++ b/package.json
@@ -18,40 +18,64 @@
     "angular2",
     "crud"
   ],
+  "repository": "yeoman/generator-generator-angular-2-crud",
+  "scripts": {
+    "test": "jest",
+    "pretest": "eslint . --fix"
+  },
+  "engines": {
+    "node": ">=4.0.0"
+  },
   "dependencies": {
     "chalk": "^2.1.0",
-    "pluralize": "^7.0.0",
-    "yeoman-generator": "^2.0.0",
-    "yosay": "^2.0.1"
+    "deep-extend": "^0.5.0",
+    "generator-node": "^2.3.0",
+    "inquirer-npm-name": "^2.0.0",
+    "lodash": "^4.17.4",
+    "mkdirp": "^0.5.1",
+    "superb": "^1.3.0",
+    "yeoman-generator": "^2.0.3"
   },
   "devDependencies": {
-    "eslint": "^4.7.0",
+    "coveralls": "^3.0.0",
+    "eslint": "^4.8.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-config-xo-space": "^0.16.0",
-    "gulp": "^3.9.1",
-    "gulp-coveralls": "^0.1.4",
-    "gulp-eslint": "^4.0.0",
-    "gulp-exclude-gitignore": "^1.2.0",
-    "gulp-istanbul": "^1.1.2",
-    "gulp-line-ending-corrector": "^1.0.1",
-    "gulp-mocha": "^4.3.1",
-    "gulp-nsp": "^2.4.2",
-    "gulp-plumber": "^1.1.0",
-    "npm-github-release": "^0.7.5",
-    "yeoman-assert": "^3.0.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "jest": "^21.2.1",
+    "jest-cli": "^21.2.1",
+    "nsp": "^2.8.1",
+    "prettier": "^1.10.2",
+    "yeoman-assert": "^3.1.0",
     "yeoman-test": "^1.7.0"
   },
   "eslintConfig": {
-    "extends": "xo-space",
+    "extends": [
+      "xo-space/esnext",
+      "prettier"
+    ],
     "env": {
-      "mocha": true
-    }
+      "jest": true,
+      "node": true
+    },
+    "rules": {
+      "prettier/prettier": [
+        "error",
+        {
+          "singleQuote": true,
+          "printWidth": 90
+        }
+      ]
+    },
+    "plugins": [
+      "prettier"
+    ]
   },
-  "repository": {
-    "url": "https://github.com/gorums/generator-angular-2-crud"
-  },
-  "scripts": {
-    "prepublish": "gulp prepublish",
-    "release": "npm-github-release"
+  "jest": {
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "templates"
+    ]
   },
   "license": "MIT"
 }
